# argcomplete_fish

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml  tests.yml
src/argcomplete_fish/: __init__.py  cli.py  generator.py  inspector.py
tests/: test_cli.py  test_generator.py  test_generator_help_formatting.py  test_inspector.py
