[project]
name = "argcomplete_fish"
authors = [
  { name = "Arbaaz Shafiq", email = "arbaazshafiq@gmail.com" }
]
version = "0.1.0"
description = "Generate fish comlpetions for python argparse parsers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
argcomplete-fish = "argcomplete_fish.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["tests/"]

[tool.ruff.lint]
select = ["F", "E", "I", "N", "ANN", "PL", "RUF"]
ignore = []
